<resources>
    <string name="app_name">SenseBox</string>

    <string name="actual_uc">ACTUAL</string>
    <string name="history_uc">HISTORY</string>
    <string name="settings_uc">SETTINGS</string>
    <string name="last_update">last update: %s</string>
    <string name="refresh">refresh</string>
    <string name="title_temperature">Temperature:</string>
    <string name="title_humidity">Humidity:</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="celsius_unit_symbol">°C</string>
    <string name="fahrenheit_unit_symbol">°F</string>
    <string name="humidity_unit_symbol">%</string>
    <string name="not_measured_symbol">___.__</string>
    <string name="count_format">%d/%d</string>
    <string name="list_no_items">There are no items in the list.</string>
    <string name="chart_no_items">There are no date to be presented.</string>
    <string name="temperature_unit">Temperature unit:</string>
    <string name="permissions_rationale">The application requires permissions for bluetooth smart communication.</string>
    <string name="average_temperature">Average temperature:</string>
    <string name="num_of_measurements">Number of measurements:</string>
    <string name="average_humidity">Average humidity:</string>
    <string name="chart">chart</string>
    <string name="list">list</string>
    <string name="maximal_abbrev">max</string>
    <string name="minimal_abbrev">min</string>
    <string name="average_abbrev">avg</string>


</resources>
