<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="sk.kotlin.sensebox.bl.vm.SettingsFragmentViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_temperature_unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/temperature_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/group_temperature_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature_unit_title"
            android:onCheckedChanged="@{(view, id) -> viewModel.onTemperatureUnitChanged(view, id)}">

            <RadioButton
                android:id="@+id/button_celsius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/celsius_unit_symbol"
                android:checked="@{viewModel.temperatureUnit.equals(@string/celsius_unit_symbol)}" />

            <RadioButton
                android:id="@+id/button_fahrenheit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fahrenheit_unit_symbol"
                android:checked="@{viewModel.temperatureUnit.equals(@string/fahrenheit_unit_symbol)}" />

        </RadioGroup>

    </android.support.constraint.ConstraintLayout>
</layout>